add docling splitter to LC example, simplify & align QA output
Signed-off-by: Panos Vagenas <35837085+vagenas@users.noreply.github.com>

--- a/examples/rag_langchain.ipynb
+++ b/examples/rag_langchain.ipynb
@@ -22,7 +22,7 @@
    ],
    "source": [
     "# requirements for this example:\n",
-    "%pip install -qq docling docling-core python-dotenv langchain-text-splitters langchain-huggingface langchain-milvus"
+    "%pip install -qq docling docling-core python-dotenv langchain langchain-text-splitters langchain-huggingface langchain-milvus"
    ]
   },
   {
@@ -58,7 +58,9 @@
     "import warnings\n",
     "\n",
     "warnings.filterwarnings(action=\"ignore\", category=UserWarning, module=\"pydantic|torch\")\n",
-    "warnings.filterwarnings(action=\"ignore\", category=FutureWarning, module=\"easyocr\")"
+    "warnings.filterwarnings(action=\"ignore\", category=FutureWarning, module=\"easyocr\")\n",
+    "# https://github.com/huggingface/transformers/issues/5486:\n",
+    "os.environ[\"TOKENIZERS_PARALLELISM\"] = \"false\""
    ]
   },
   {
@@ -80,8 +82,9 @@
    "metadata": {},
    "source": [
     "Below we set up:\n",
-    "- a `Loader` which will be used to create LangChain documents, and\n",
-    "- a splitter, which will be used to split these documents"
+    "- a `Loader` which will be used to create LangChain documents,\n",
+    "- a splitter, which will be used to split these documents, and\n",
+    "- a helper function for QA printing"
    ]
   },
   {
@@ -95,20 +98,19 @@
     "\n",
     "from langchain_core.document_loaders import BaseLoader\n",
     "from langchain_core.documents import Document as LCDocument\n",
-    "from pydantic import BaseModel\n",
     "\n",
     "from docling.document_converter import DocumentConverter\n",
     "\n",
-    "\n",
-    "class DocumentMetadata(BaseModel):\n",
-    "    dl_doc_hash: str\n",
-    "    # source: str\n",
+    "_KEY_DL_DOC_HASH = \"dl_doc_hash\"\n",
+    "_KEY_ORIGIN = \"origin\"\n",
     "\n",
     "\n",
     "class DoclingPDFLoader(BaseLoader):\n",
     "    class ParseType(str, Enum):\n",
     "        MARKDOWN = \"markdown\"\n",
-    "        # JSON = \"json\"\n",
+    "        JSON = \"json\"\n",
+    "\n",
+    "    include_origin: bool = False\n",
     "\n",
     "    def __init__(self, file_path: str | list[str], parse_type: ParseType) -> None:\n",
     "        self._file_paths = file_path if isinstance(file_path, list) else [file_path]\n",
@@ -121,17 +123,21 @@
     "            match self._parse_type:\n",
     "                case self.ParseType.MARKDOWN:\n",
     "                    text = dl_doc.export_to_markdown()\n",
-    "                # case self.ParseType.JSON:\n",
-    "                #     text = dl_doc.model_dump_json()\n",
+    "                case self.ParseType.JSON:\n",
+    "                    text = dl_doc.model_dump_json()\n",
     "                case _:\n",
     "                    raise RuntimeError(\n",
     "                        f\"Unexpected parse type encountered: {self._parse_type}\"\n",
     "                    )\n",
+    "            metadata = {\n",
+    "                _KEY_DL_DOC_HASH: dl_doc.file_info.document_hash,\n",
+    "            }\n",
+    "            if self.include_origin:\n",
+    "                metadata[_KEY_ORIGIN] = source\n",
+    "\n",
     "            lc_doc = LCDocument(\n",
     "                page_content=text,\n",
-    "                metadata=DocumentMetadata(\n",
-    "                    dl_doc_hash=dl_doc.file_info.document_hash,\n",
-    "                ).model_dump(),\n",
+    "                metadata=metadata,\n",
     "            )\n",
     "            yield lc_doc"
    ]
@@ -142,40 +148,140 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FILE_PATH = \"https://arxiv.org/pdf/2206.01062\"  # DocLayNet paper"
+    "import json\n",
+    "from typing import Iterable, List\n",
+    "\n",
+    "from docling_core.transforms.chunker import BaseChunker, HierarchicalChunker\n",
+    "from docling_core.types import Document as DLDocument\n",
+    "from langchain_core.documents import Document as LCDocument\n",
+    "\n",
+    "\n",
+    "class DoclingSplitter:\n",
+    "\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        chunker: BaseChunker | None = None,\n",
+    "    ) -> None:\n",
+    "        self.chunker: BaseChunker = chunker or HierarchicalChunker(\n",
+    "            heading_as_metadata=True\n",
+    "        )\n",
+    "\n",
+    "    def split_documents(self, documents: Iterable[LCDocument]) -> List[LCDocument]:\n",
+    "\n",
+    "        all_chunk_docs: list[LCDocument] = []\n",
+    "        for doc in documents:\n",
+    "            lc_doc: LCDocument = LCDocument.parse_obj(doc)\n",
+    "            dl_doc: DLDocument = DLDocument.model_validate_json(lc_doc.page_content)\n",
+    "            chunk_iter = self.chunker.chunk(dl_doc=dl_doc)\n",
+    "            for chunk in chunk_iter:\n",
+    "                chunk_metadata = chunk.model_dump(\n",
+    "                    exclude=\"text\",\n",
+    "                    exclude_none=True,\n",
+    "                )\n",
+    "                metadata = {**lc_doc.metadata, **chunk_metadata}\n",
+    "                for k, v in metadata.items():\n",
+    "                    if isinstance(v, Iterable) and not isinstance(v, str):\n",
+    "                        metadata[k] = json.dumps(v)\n",
+    "                chunk_doc = LCDocument(\n",
+    "                    page_content=chunk.text,\n",
+    "                    metadata=metadata,\n",
+    "                )\n",
+    "                all_chunk_docs.append(chunk_doc)\n",
+    "\n",
+    "        return all_chunk_docs"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1b38d07d5fed4618a44ecf261e1e5c44",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Fetching 7 files:   0%|          | 0/7 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
+    "def print_qa(resp_dict):\n",
+    "    def clip(inp, max_len=100):\n",
+    "        if isinstance(inp, str):\n",
+    "            return f\"{inp[:max_len]}{'...' if len(inp) > max_len else ''}\"\n",
+    "        else:\n",
+    "            return inp\n",
     "\n",
+    "    print(\n",
+    "        f\"Question:\\n{resp_dict['input']}\\n\\nAnswer:\\n{json.dumps(clip(resp_dict['answer']))}\"\n",
+    "    )\n",
+    "    for i, doc in enumerate(resp_dict[\"context\"]):\n",
+    "        print()\n",
+    "        print(f\"Source {i+1}:\")\n",
+    "        print(f\"  text: {json.dumps(clip(doc.page_content))}\")\n",
+    "        for key in doc.metadata:\n",
+    "            if key != \"pk\":\n",
+    "                print(f\"  {key}: {clip(doc.metadata.get(key))}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "FILE_PATH = \"https://arxiv.org/pdf/2206.01062\"  # DocLayNet paper"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Using native Docling format (as JSON)**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To leverage Docling's rich document structure format, we can namely export to JSON and use the `DoclingSplitter` accordingly:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "loader = DoclingPDFLoader(\n",
     "    file_path=FILE_PATH,\n",
-    "    parse_type=DoclingPDFLoader.ParseType.MARKDOWN,\n",
+    "    parse_type=DoclingPDFLoader.ParseType.JSON,\n",
     ")\n",
-    "text_splitter = RecursiveCharacterTextSplitter(\n",
-    "    chunk_size=1000,\n",
-    "    chunk_overlap=200,\n",
-    ")"
+    "splitter = DoclingSplitter()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Using Markdown:**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alternatively, to just use the flat Markdown export instead of the native document format, one can uncomment and use the following:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
+    "\n",
+    "# loader = DoclingPDFLoader(\n",
+    "#     file_path=FILE_PATH,\n",
+    "#     parse_type=DoclingPDFLoader.ParseType.MARKDOWN,\n",
+    "# )\n",
+    "# splitter = RecursiveCharacterTextSplitter(\n",
+    "#     chunk_size=1000,\n",
+    "#     chunk_overlap=200,\n",
+    "# )"
    ]
   },
   {
@@ -187,31 +293,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "docs = loader.load()\n",
-    "splits = text_splitter.split_documents(docs)"
+    "splits = splitter.split_documents(docs)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Embeddings"
+    "### Embed model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain_huggingface.embeddings import HuggingFaceEmbeddings\n",
     "\n",
     "HF_EMBED_MODEL_ID = \"BAAI/bge-small-en-v1.5\"\n",
-    "embeddings = HuggingFaceEmbeddings(model_name=HF_EMBED_MODEL_ID)"
+    "embedding = HuggingFaceEmbeddings(model_name=HF_EMBED_MODEL_ID)"
    ]
   },
   {
@@ -223,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,13 +338,14 @@
     "from langchain_milvus import Milvus\n",
     "\n",
     "MILVUS_URI = os.environ.get(\n",
-    "    \"MILVUS_URL\", f\"{(tmp_dir := TemporaryDirectory()).name}/milvus_demo.db\"\n",
+    "    \"MILVUS_URI\", f\"{(tmp_dir := TemporaryDirectory()).name}/milvus_demo.db\"\n",
     ")\n",
     "\n",
     "vectorstore = Milvus.from_documents(\n",
     "    splits,\n",
-    "    embeddings,\n",
+    "    embedding,\n",
     "    connection_args={\"uri\": MILVUS_URI},\n",
+    "    collection_name=\"docling_lc_demo\",\n",
     "    drop_old=True,\n",
     ")"
    ]
@@ -252,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -287,62 +394,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Iterable\n",
-    "\n",
-    "from langchain_core.documents import Document as LCDocument\n",
-    "from langchain_core.output_parsers import StrOutputParser\n",
+    "from langchain.chains import create_retrieval_chain\n",
+    "from langchain.chains.combine_documents import create_stuff_documents_chain\n",
     "from langchain_core.prompts import PromptTemplate\n",
-    "from langchain_core.runnables import RunnablePassthrough\n",
-    "\n",
-    "\n",
-    "def format_docs(docs: Iterable[LCDocument]):\n",
-    "    return \"\\n\\n\".join(doc.page_content for doc in docs)\n",
-    "\n",
     "\n",
     "retriever = vectorstore.as_retriever()\n",
-    "\n",
     "prompt = PromptTemplate.from_template(\n",
-    "    \"Context information is below.\\n---------------------\\n{context}\\n---------------------\\nGiven the context information and not prior knowledge, answer the query.\\nQuery: {question}\\nAnswer:\\n\"\n",
+    "    \"Context information is below.\\n---------------------\\n{context}\\n---------------------\\nGiven the context information and not prior knowledge, answer the query.\\nQuery: {input}\\nAnswer:\\n\"\n",
     ")\n",
-    "\n",
-    "rag_chain = (\n",
-    "    {\"context\": retriever | format_docs, \"question\": RunnablePassthrough()}\n",
-    "    | prompt\n",
-    "    | llm\n",
-    "    | StrOutputParser()\n",
-    ")"
+    "question_answer_chain = create_stuff_documents_chain(llm, prompt)\n",
+    "rag_chain = create_retrieval_chain(retriever, question_answer_chain)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'The human annotation of DocLayNet was performed on 80863 pages.\\n\\nExplanation:\\nThe information is found in the paragraph \"DocLayNet contains 80863 PDF pages\" in the context.'"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Question:\n",
+      "How many pages were human annotated for DocLayNet?\n",
+      "\n",
+      "Answer:\n",
+      "\"80863 pages were human annotated for DocLayNet.\\nExplanation:\\nFrom the context, it is clear that DocL...\"\n",
+      "\n",
+      "Source 1:\n",
+      "  text: \"DocLayNet contains 80863 PDF pages. Among these, 7059 carry two instances of human annotations, and ...\"\n",
+      "  bbox: [317.2852478027344, 116.46983337402344, 559.7131958007812, 201.73675537109375]\n",
+      "  dl_doc_hash: 5dfbd8c115a15fd3396b68409124cfee29fc8efac7b5c846634ff924e635e0dc\n",
+      "  heading: 3 THE DOCLAYNET DATASET\n",
+      "  page: 2\n",
+      "  path: $.main-text[37]\n",
+      "\n",
+      "Source 2:\n",
+      "  text: \"In this paper, we present the DocLayNet dataset. It provides pageby-page layout annotation ground-tr...\"\n",
+      "  bbox: [53.50020980834961, 212.36782836914062, 295.56396484375, 286.4964599609375]\n",
+      "  dl_doc_hash: 5dfbd8c115a15fd3396b68409124cfee29fc8efac7b5c846634ff924e635e0dc\n",
+      "  heading: 1 INTRODUCTION\n",
+      "  page: 2\n",
+      "  path: $.main-text[23]\n",
+      "\n",
+      "Source 3:\n",
+      "  text: \"Phase 4: Production annotation. The previously selected 80K pages were annotated with the defined 11...\"\n",
+      "  bbox: [317.3695373535156, 82.78482818603516, 559.7149047851562, 244.83221435546875]\n",
+      "  dl_doc_hash: 5dfbd8c115a15fd3396b68409124cfee29fc8efac7b5c846634ff924e635e0dc\n",
+      "  heading: 4 ANNOTATION CAMPAIGN\n",
+      "  page: 5\n",
+      "  path: $.main-text[80]\n",
+      "\n",
+      "Source 4:\n",
+      "  text: \"DocLayNet: A Large Human-Annotated Dataset for Document-Layout Analysis\"\n",
+      "  bbox: [53.60108947753906, 723.3781127929688, 347.139892578125, 731.6909790039062]\n",
+      "  dl_doc_hash: 5dfbd8c115a15fd3396b68409124cfee29fc8efac7b5c846634ff924e635e0dc\n",
+      "  heading: REFERENCES\n",
+      "  page: 9\n",
+      "  path: $.main-text[133]\n"
+     ]
     }
    ],
    "source": [
-    "rag_chain.invoke(\"How many pages were human annotated for DocLayNet?\")"
+    "resp_dict = rag_chain.invoke(\n",
+    "    {\"input\": \"How many pages were human annotated for DocLayNet?\"}\n",
+    ")\n",
+    "print_qa(resp_dict=resp_dict)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
